# Certification_project

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  ci.yml  pyproject.toml  requirements.txt  test_main.py
app/: __init__.py  main.py  utils.py
